bases/apps/torrents/nzbget/nzbget-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nzbget
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nzbget
  template:
    metadata:
      labels:
        app: nzbget
    spec:
      volumes:
        - name: nzbget-config
          persistentVolumeClaim:
            claimName: nzbget-config
        - name: nfs-downloads
          persistentVolumeClaim:
            claimName: nzbget-downloads-nfs
      containers:
        - name: nzbget
          image: ghcr.io/hotio/nzbget:release-24.3 # {"$imagepolicy": "torrents:nzbget"}
          volumeMounts:
            - name: nzbget-config
              mountPath: /config
            - mountPath: /data/downloads
              name: nfs-downloads
          resources:
            requests:
              memory: "128Mi"
              cpu: "25m"
            limits:
              memory: "500Mi"
              cpu: "250m"
