bases/apps/torrents/nzbget/nzbget-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nzbget
spec:
  selector: 
    app: nzbget
  type: ClusterIP
  ports:
  - port: 6789
    targetPort: 6789
