bases/apps/torrents/nzbget/nzbget-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nzbget-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: default-clusterissuer
spec:
  tls:
  - hosts:
    - nzbget.local
    secretName: nzbget-cert
  rules:
  - host: nzbget.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nzbget
            port:
              number: 6789
